<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="60sp"
        android:background="@color/black"
        android:padding="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnResiduo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoResiduo"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/gris">
        </Button>
        <Button
            android:id="@+id/btnPar1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoPar1"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/gris">
        </Button>
        <Button
            android:id="@+id/btnPar2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoPar2"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/gris">
        </Button>
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoClear"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/naranja">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto7"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto8"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto9"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btnMas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoMas"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/rojo">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto4"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto5"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto6"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btnMenos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoMenos"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/rojo">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto1"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto2"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto3"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoDiv"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/rojo">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/texto0"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btnPunto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoPunto"
            android:textSize="35sp"
            android:layout_margin="16dp">
        </Button>
        <Button
            android:id="@+id/btnIgual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoIgual"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/gris">
        </Button>
        <Button
            android:id="@+id/btnMult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textoMult"
            android:textSize="35sp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/rojo">
        </Button>
    </LinearLayout>
</LinearLayout>


